# drf-basic-auth

./: README.md  db.sqlite3  local.env  pyproject.toml
drf-basic-auth/: manage.py
drf-basic-auth/apps/core/: models.py  serializers.py  urls.py  views.py
drf-basic-auth/apps/core/migrations/: 0001_initial.py
drf-basic-auth/apps/reviews/: admin.py  models.py  serializers.py  views.py
drf-basic-auth/apps/reviews/migrations/: 0001_initial.py  0002_image_product_image.py
drf-basic-auth/drf_basic_auth/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_drf_basic_auth.py
