[tool.poetry]
name = "drf-basic-auth"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <matheusblopes10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
prettyconf = "^2.2.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
